--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,7 @@ body {
   justify-content: space-between;
   gap: 20px;
   margin: 40px;
+  flex-wrap: wrap;
 }
 
 .card {
@@ -32,6 +33,13 @@ body {
   border-radius: 8px;
   padding: 20px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.card ul {
+  list-style: none;
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  padding: 0;
 }
 .card__title {
   font-size: 24px;
@@ -58,13 +66,6 @@ body {
 }
 .card__list__list-item :hover {
   font-weight: bold;
-}
-.card__list ul {
-  list-style: none;
-  display: flex;
-  gap: 10px;
-  flex-direction: column;
-  padding: 0;
 }
 
 .single-card {
