--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -22,6 +22,7 @@ body {
     justify-content: space-between;
     gap:20px;
     margin:40px;
+    flex-wrap: wrap;
 }
 .card {
     border: 1px solid #e0e0e0;
@@ -29,6 +30,13 @@ body {
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    ul {
+        list-style: none;
+        display:flex;
+        gap:10px;
+        flex-direction: column;
+        padding:0;
+    }
     &__title {
         font-size: 24px;
         margin-bottom: 10px;
@@ -57,13 +65,7 @@ body {
             font-weight: bold;
         }
         }
-        ul {
-            list-style: none;
-            display:flex;
-            gap:10px;
-            flex-direction: column;
-            padding:0;
-        }
+       
     }
 }
 .single-card {
