--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background: rgb(248, 248, 225);
+  background: #f5ebe0;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
 }
@@ -54,7 +54,7 @@ body {
   font-weight: bold;
 }
 .card__list__list-item {
-  background: rgb(255, 216, 222);
+  background: #d5bdaf;
   border-radius: 8px;
   padding: 10px 20px;
   text-align: center;
@@ -78,5 +78,5 @@ body {
 }
 
 .card-category {
-  width: 80%;
+  width: 100%;
 }
