--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,5 +1,5 @@
 body {
-    background: rgb(248, 248, 225);
+    background: #f5ebe0;
     font-family: Arial, Helvetica, sans-serif;
     margin:0;
 }
@@ -51,7 +51,7 @@ body {
     }
     &__list  {
         &__list-item{
-            background: rgb(255, 216, 222);
+            background:#d5bdaf;
             border-radius:8px;
             padding:10px 20px;
             text-align: center;
@@ -76,5 +76,5 @@ body {
     gap:30px;
 }
 .card-category {
-    width:80%;
+    width:100%;
 }
